resized nerdfont links padding to avoid overlapping articles

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -103,7 +103,7 @@ nav {
 }
 
 #links {
-    padding: 15px 0;
+    padding: 5px 0 40px 0;
 }
 
 article, .articlePreview {
